# Basic_unsupervised_learning_algorithms_and_text-data_processing

./: README.md  main.py  pyproject.toml  setup.py
REPORTS/: PCA_README_REPORT.md  SYNTHETIC_REPORT.md  TERMS_GLOSSARY.md  TEXT_CLASSIFICATION_REPORT.md  user_photo_2023-10-30_2023-11-06_REPORT.md
methods/: kmeans_quantize.py  pca_kmeans.py  text_classify.py
outputs/pca_tsne_kmeans/: README.md  pca_comparison.csv
outputs/quantization/: README.md
outputs/text/: README.md  text_classification_report.txt
